[package]
name = "glorby"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 3

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[dependencies]
bevy = { version = "0.16", features = ["jpeg", "exr", "flac"] }
bevy_simple_subsecond_system = { version = "0.2.0", optional = true }
bytemuck = "1.23.0"
glam = { version = "0.29", features = ["bytemuck"] }
bevy_framepace = "0.19.1"
argh = "0.1.13"

[features]
subsecond = ["dep:bevy_simple_subsecond_system"]

# These lints may be important signals about code quality, but normal Bevy code
# commonly triggers them and the CI workflow treats them as errors, so we've
# chosen to allow them in this template.
#
# Feel free to delete the following lines.
[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
